--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorPrimary">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
+        <item name="android:editTextColor">@color/white</item>
     </style>
 
 
@@ -12,7 +13,16 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorPrimary">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
+        <item name="android:editTextColor">@color/white</item>
+        <item name="hintTextColor">@color/white</item>
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
+    
+    <style name="Button.Outline" parent="ThemeOverlay.AppCompat">
+        <item name="android:shape">rectangle</item>
+        <item name="cornerRadius">5dp</item>
+        <item name="strokeColor">@color/white</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
 </resources>
