--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="text_secondary">#B3B3B3</color>
     <color name="dark_gray">#262626</color>
     <color name="ripple">#E5E5E5</color>
-    <color name="red">#E50914</color>
+    <color name="red">#C60A0A</color>
     <color name="black_transparent">#BF000000</color>
     <color name="bottom_sheet_bg">#2B2B2B</color>
 </resources>
