--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,8 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
 
 
+
+    <ImageView
+        android:id="@+id/imgLogoShort"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_netflix_short_logo"
+        android:layout_margin="10dp"
+        />
+
+    <ImageView
+        android:id="@+id/imgSearch"
+        android:layout_width="35dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_search"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/imgProfile"
+        app:layout_constraintBottom_toBottomOf="@id/imgLogoShort"/>
+
+
+    <ImageView
+        android:id="@+id/imgProfile"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/ic_chevron_right"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/imgLogoShort"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
