--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,8 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorPrimary">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
-        <item name="android:editTextColor">@color/white</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
@@ -26,7 +27,4 @@
         <item name="strokeWidth">2dp</item>
     </style>
 
-    <style name="LoginTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-        <item name="boxStrokeColor">@color/edt_til_signin_main</item>
-    </style>
 </resources>
