--- a/app/src/main/res/layout/fragment_sign_in_main.xml
+++ b/app/src/main/res/layout/fragment_sign_in_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SignInMainFragment">
+    tools:context=".fragments.SignInMainFragment">
 
     <ImageButton
         android:id="@+id/btnClose"
