--- a/app/src/main/res/navigation/nav_graph1.xml
+++ b/app/src/main/res/navigation/nav_graph1.xml
@@ -3,46 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph1"
-    app:startDestination="@id/signInMainFragment">
+    app:startDestination="@id/getStartedFragment">
 
     <fragment
         android:id="@+id/getStartedFragment"
-        android:name="com.example.myapplication.GetStartedFragment"
+        android:name="com.example.myapplication.fragments.GetStarted.ui.GetStartedFragment"
         android:label="fragment_get_started"
         tools:layout="@layout/fragment_get_started" />
     <fragment
         android:id="@+id/signInEmailFragment"
-        android:name="com.example.myapplication.SignInEmailFragment"
+        android:name="com.example.myapplication.fragments.SignInEmailFragment"
         android:label="fragment_sign_in_email"
         tools:layout="@layout/fragment_sign_in_email" />
     <fragment
         android:id="@+id/signInMainFragment"
-        android:name="com.example.myapplication.SignInMainFragment"
+        android:name="com.example.myapplication.fragments.SignInMainFragment"
         android:label="fragment_sign_in_main"
         tools:layout="@layout/fragment_sign_in_main" />
     <fragment
         android:id="@+id/accountsFragment"
-        android:name="com.example.myapplication.AccountsFragment"
+        android:name="com.example.myapplication.fragments.AccountsFragment"
         android:label="fragment_accounts"
         tools:layout="@layout/fragment_accounts" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.myapplication.HomeFragment"
+        android:name="com.example.myapplication.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/newHotFragment"
-        android:name="com.example.myapplication.NewHotFragment"
+        android:name="com.example.myapplication.fragments.NewHotFragment"
         android:label="fragment_new_hot"
         tools:layout="@layout/fragment_new_hot" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.myapplication.SearchFragment"
+        android:name="com.example.myapplication.fragments.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/downloadsFragment"
-        android:name="com.example.myapplication.DownloadsFragment"
+        android:name="com.example.myapplication.fragments.DownloadsFragment"
         android:label="fragment_downloads"
         tools:layout="@layout/fragment_downloads" />
 </navigation>
