--- a/app/src/main/res/drawable/bg_gradient_bottom_top.xml
+++ b/app/src/main/res/drawable/bg_gradient_bottom_top.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="@android:color/transparent"
-        android:centerColor="#80000000"
+        android:centerColor="@android:color/transparent"
+        android:endColor="#80000000"
         android:startColor="@color/black"
-        android:centerY="0.8"
+        android:centerY="0.75"
         android:type="linear" />
 </shape>
