--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,9 +7,17 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/white</item>
+        <item name="actionMenuTextColor">@color/white</item>
+
+
+        //For changing toolbar three dot menu appearance
+    </style>
+    <style name="Theme.PopupOverlay.Menu" parent="ThemeOverlay.AppCompat.Light" >
+        <item name="android:textColor">@color/dark_gray</item>
     </style>
 
 
+    //Splash screen theme
     <style name="SplashScreenTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorPrimary">@color/black</item>
@@ -19,7 +27,9 @@
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
-    
+
+
+    // theme for button outlined
     <style name="Button.Outline" parent="ThemeOverlay.AppCompat">
         <item name="android:shape">rectangle</item>
         <item name="cornerRadius">5dp</item>
