--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,8 +14,14 @@
     </style>
     <style name="Theme.PopupOverlay.Menu" parent="ThemeOverlay.AppCompat.Light" >
         <item name="android:textColor">@color/dark_gray</item>
+
+        
     </style>
 
+
+    <style name="ThreeDotStyle" parent="Widget.AppCompat.Light.ActionButton.Overflow">
+        <item name="android:tint">@color/white</item>
+    </style>
 
     //Splash screen theme
     <style name="SplashScreenTheme" parent="Theme.Material3.DayNight.NoActionBar">
