--- a/app/src/main/res/navigation/nav_graph1.xml
+++ b/app/src/main/res/navigation/nav_graph1.xml
@@ -8,50 +8,69 @@
 
     <fragment
         android:id="@+id/getStartedFragment"
-        android:name="com.example.myapplication.fragments.GetStarted.ui.GetStartedFragment"
+        android:name="com.example.myapplication.fragments.getstarted.ui.GetStartedFragment"
         android:label="fragment_get_started"
-        tools:layout="@layout/fragment_get_started" />
+        tools:layout="@layout/fragment_get_started" >
+        <action
+            android:id="@+id/action_getStartedFragment_to_signInEmailFragment"
+            app:destination="@id/signInEmailFragment" />
+        <action
+            android:id="@+id/action_getStartedFragment_to_signInMainFragment"
+            app:destination="@id/signInMainFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/signInEmailFragment"
-        android:name="com.example.myapplication.fragments.SignInEmailFragment"
+        android:name="com.example.myapplication.fragments.signin.email.ui.SignInEmailFragment"
         android:label="fragment_sign_in_email"
         tools:layout="@layout/fragment_sign_in_email" />
 
     <fragment
         android:id="@+id/signInMainFragment"
-        android:name="com.example.myapplication.fragments.SignInMainFragment"
+        android:name="com.example.myapplication.fragments.signin.main.ui.SignInMainFragment"
         android:label="fragment_sign_in_main"
-        tools:layout="@layout/fragment_sign_in_main" />
+        tools:layout="@layout/fragment_sign_in_main" >
+        <action
+            android:id="@+id/action_signInMainFragment_to_createAccountFragment"
+            app:destination="@id/createAccountFragment" />
+        <action
+            android:id="@+id/action_signInMainFragment_to_signInEmailFragment"
+            app:destination="@id/signInEmailFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/accountsFragment"
-        android:name="com.example.myapplication.fragments.AccountsFragment"
+        android:name="com.example.myapplication.fragments.accounts.ui.AccountsFragment"
         android:label="fragment_accounts"
         tools:layout="@layout/fragment_accounts" />
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.myapplication.fragments.HomeFragment"
+        android:name="com.example.myapplication.fragments.home.ui.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/newHotFragment"
-        android:name="com.example.myapplication.fragments.NewHotFragment"
+        android:name="com.example.myapplication.fragments.new_hot.ui.NewHotFragment"
         android:label="fragment_new_hot"
         tools:layout="@layout/fragment_new_hot" />
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.myapplication.fragments.SearchFragment"
+        android:name="com.example.myapplication.fragments.search.ui.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/downloadsFragment"
-        android:name="com.example.myapplication.fragments.DownloadsFragment"
+        android:name="com.example.myapplication.fragments.downloads.ui.DownloadsFragment"
         android:label="fragment_downloads"
         tools:layout="@layout/fragment_downloads" />
+    <fragment
+        android:id="@+id/createAccountFragment"
+        android:name="com.example.myapplication.CreateAccountFragment"
+        android:label="fragment_create_account"
+        tools:layout="@layout/fragment_create_account" />
 
 </navigation>
