--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,6 @@
 
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorPrimary">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/white</item>
@@ -14,14 +13,14 @@
     </style>
     <style name="Theme.PopupOverlay.Menu" parent="ThemeOverlay.AppCompat.Light" >
         <item name="android:textColor">@color/dark_gray</item>
-
-        
     </style>
 
 
     <style name="ThreeDotStyle" parent="Widget.AppCompat.Light.ActionButton.Overflow">
         <item name="android:tint">@color/white</item>
     </style>
+
+
 
     //Splash screen theme
     <style name="SplashScreenTheme" parent="Theme.Material3.DayNight.NoActionBar">
@@ -32,7 +31,10 @@
         <item name="hintTextColor">@color/white</item>
     </style>
 
+
+
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
+
 
 
     // theme for button outlined
@@ -41,6 +43,12 @@
         <item name="cornerRadius">5dp</item>
         <item name="strokeColor">@color/white</item>
         <item name="strokeWidth">2dp</item>
+    </style>
+
+
+    <style name="Button.GetStarted" parent="ThemeOverlay.AppCompat">
+        <item name="android:shape">rectangle</item>
+        <item name="colorPrimary">@color/red</item>
     </style>
 
 </resources>
